Bug 347873 - small reappearing gap between bottom of panel and bottom of screen
Summary: small reappearing gap between bottom of panel and bottom of screen
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.3.0
Platform: Kubuntu Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL: https://i.imgur.com/El5llkE.png
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-18 01:36 UTC by MMDeveloper
Modified: 2017-10-22 14:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description MMDeveloper 2015-05-18 01:36:08 UTC
There is a small gap between the bottom of my horizontal panel and the bottom of my screen. If I "Unlock Widgets" and click on the wrench icon of my panel, then click on "Screen Edge" and re-lock widgets, the gap will disappear until I reboot. When I reboot, the gap is back until I click "Screen Edge" again.

This is a fresh install of Kubuntu 15.04 (plasma 5.2.2) and someone recommended I upgrade to plasma 5.3.0, which I did, and it didn't fix the problem. This may just be my mind playing tricks, but with plasma 5.3.0, the gap looks a few pixels larger.

Reproducible: Always

Steps to Reproduce:
1. Install Kubuntu
2. Unlock Widgets
3. Click Wrench Icon
4. Click "Screen Edge"
5. Lock Widgets

Actual Results:  
The gap disappears as the panel is 'moved' to the bottom of the screen. When I reboot, the gap reappears.

Expected Results:  
The gap should have remained gone.

The only modification I've made to the panel is adding a couple of icons next to the launcher, and I've ever-so-slightly adjusted the overall height to make the icons a tad larger. I'm using a different desktop theme but changing back to the original theme does not affect the issue.
Comment 1 MMDeveloper 2015-05-18 01:56:22 UTC
Some additional information didn't occur to me worth mentioning (sorry I'm new to this). I'm on a Dell Latitude 17" touchscreen laptop with AMD gpu but using the non-proprietary graphics drivers.

I had the latest version of kubuntu that was before the official release of version 15 and this gap did not appear (same laptop, older version of KDE).
Comment 2 Marco Martin 2015-05-20 10:07:06 UTC
this is probably caused by an old oddity of QRect api for which rect.bottom() = rect.y() + rect.height() - 1
Comment 3 Marco Martin 2015-05-20 11:24:26 UTC
Git commit a36772ea282730b5e2031a2fb88d2d18b1863ff2 by Marco Martin.
Committed on 20/05/2015 at 11:23.
Pushed by mart into branch 'Plasma/5.3'.

adjust the one pixel gap for right aligned panels

M  +1    -1    shell/panelview.cpp

http://commits.kde.org/plasma-workspace/a36772ea282730b5e2031a2fb88d2d18b1863ff2
Comment 4 Dmitry Vakhnin 2017-10-22 14:46:45 UTC
Now I have this in plasma 5.11.1 Neon packages on kde neon.