adjust the one pixel gap for right aligned panels

BUG:347873